<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="465dp"
        android:layout_height="52dp"
        android:background="@color/blue_3"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="185dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/logo_absen"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/presen"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/siswa"
        android:textColor="#C62828"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="461dp"
        android:layout_height="497dp"
        android:background="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="121dp"
            android:layout_height="70dp"
            android:layout_marginStart="141dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="141dp"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="16sp"
            app:backgroundTint="#FDFDFD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            tools:ignore="UsingOnClickInXml" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="61dp"
            android:background="#FFFFFF"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="61dp"
            android:background="#FFFFFF"
            android:hint="@string/nisn"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            tools:ignore="Autofill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>