<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradasi"
    tools:context=".absen">

    <EditText
        android:id="@+id/txt.name"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:hint="@string/nama1"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txt.kelas"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/kelas"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt.nisn"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txt.nisn"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/nisn1"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt.name"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/txt_keterangan"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:text="@string/keterangan"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt.kelas" />

    <TextView
        android:id="@+id/txt_hadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/hadir"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_keterangan" />

    <TextView
        android:id="@+id/txt_sakit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/sakit"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/txt_hadir"
        app:layout_constraintTop_toBottomOf="@+id/txt_keterangan" />

    <TextView
        android:id="@+id/txt_ijin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ijin"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toEndOf="@+id/txt_sakit"
        app:layout_constraintTop_toBottomOf="@+id/txt_keterangan" />

    <ImageView
        android:id="@+id/img_create"
        android:layout_width="85dp"
        android:layout_height="81dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/checklist"
        android:onClick="centang"
        tools:ignore="ContentDescription,UsingOnClickInXml" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="327dp"
        android:onClick="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="ContentDescription,UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="69dp"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toTopOf="@+id/txt_keterangan"
        tools:ignore="MissingConstraints,UselessLeaf"
        tools:layout_editor_absoluteX="53dp">

        <RadioGroup
            android:layout_width="309dp"
            android:layout_height="53dp"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="477dp"
            tools:ignore="MissingConstraints,UselessLeaf,UselessParent">

            <RadioButton
                android:id="@+id/rdbtn_sakit"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_marginStart="147dp"
                android:layout_marginTop="1dp"
                android:onClick="onRadioButtonClicked"
                app:layout_constraintStart_toEndOf="@+id/rdbtn_hadir"
                app:layout_constraintTop_toBottomOf="@+id/txt_sakit" />

            <RadioButton
                android:id="@+id/rdbtn_ijin"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_marginStart="246dp"
                android:layout_marginTop="-45dp"
                android:onClick="onRadioButtonClicked"
                app:layout_constraintStart_toEndOf="@+id/rdbtn_sakit"
                app:layout_constraintTop_toBottomOf="@+id/txt_hadir" />

            <RadioButton
                android:id="@+id/rdbtn_hadir"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="-45dp"
                android:onClick="onRadioButtonClicked"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </RadioGroup>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>